Updating images to minimise surrounding padding on themselves, and instead defer to the container to do that e.g. image-content-list li elements. Hoisted image-content-list exceptions out of image-content and image-title (letting the image itself not worry about that). Flattened out image-content section to avoid unnecessary nesting e.g. div > form, when we can just use form. More use of flex gap on containers instead of individual components setting their own margins.

--- a/src/components/images/partials/_image-content.scss
+++ b/src/components/images/partials/_image-content.scss
@@ -1,29 +1,9 @@
 @use '../../../compiled/scss/tokens';
 
-.image-content-list {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-
-	> li:not(:last-child) {
-		border-bottom: 1px dashed var(--color-border-default);
-	}
-}
-
-.image-title {
-	margin-bottom: var(--size-spacing-default);
-}
-
 .image-content {
 	clear: both;
 	max-width: 100%;
-	padding: var(--size-spacing-half-again);
 	position: relative;
-
-	@media screen and (min-width: tokens.$size-breakpoint-lg) {
-		padding: var(--size-spacing-half-again) var(--size-spacing-quadruple)
-			var(--size-spacing-quadruple);
-	}
 
 	.the-image {
 		a,
@@ -36,15 +16,5 @@
 	img.unsized {
 		height: auto;
 		max-width: 100%;
-	}
-
-	// list overrides
-	.image-content-list & {
-		float: none;
-		padding: 0 var(--size-spacing-half-again) var(--size-spacing-half-again);
-
-		@media screen and (min-width: tokens.$size-breakpoint-lg) {
-			padding: 0 var(--size-spacing-quadruple) var(--size-spacing-quadruple);
-		}
 	}
 }
